# mif

./: .gitignore  DOCS_INDEX.md  README.md  alfredpy.bat  pyproject.toml  run.sh  start_gui.py  start_hotkey.py  start_menubar.py  view_logs.sh
.opencode/skills/: README.md  development.md  troubleshooting.md
AlfredPy.app/Contents/: Info.plist
AlfredPy.app/Contents/MacOS/: alfredpy  mfs
alfredpy/: __init__.py  __main__.py  config.py  main.py  workflow.py
alfredpy/gui/: __init__.py  launcher.py  menubar.py  singleton.py
alfredpy/plugins/: __init__.py  base.py  calc_plugin.py  chrome_bookmarks_plugin.py  settings_plugin.py  workflow_plugin.py
config/: chrome_bookmarks_clicks.json  plugin_configs.json  workflows.json
docs/: QML_MIGRATION.md
docs/dev/: ARCHITECTURE.md  FLET_COMPATIBILITY.md  KNOWLEDGE_BASE.md  LOGGING_DESIGN.md  PLUGIN_CONFIG.md  README.md
docs/user/: LOGGING_SYSTEM.md  QUICKSTART.md  README.md  STARTUP_GUIDE.md
mfs/: main.py  workflow.py
mfs/gui/: singleton.py
mfs/plugins/: chrome_bookmarks_plugin.py
mif/: __init__.py  __main__.py  config.py  logging_setup.py  main.py
mif/application/: __init__.py  service.py
mif/gui/: hotkey.py  launcher.py  menubar.py
mif/gui_qml/: __init__.py  launcher.py
mif/gui_qml/qml/: Main.qml
mif/gui_qml/qml/components/: AtModeBanner.qml  AtPluginItem.qml  CalcPanel.qml  ConfigItem.qml  ResultItem.qml  ResultList.qml  SearchBar.qml  SectionLabel.qml
mif/gui_qt/: __init__.py  launcher.py  singleton.py
mif/plugins/: __init__.py  base.py  calc_plugin.py  config_store.py  coordinator.py  registry.py  settings_plugin.py  workflow_plugin.py
tests/: test_application_service.py  test_calc_plugin.py  test_config.py  test_gui.py  test_gui_qt.py  test_main.py  test_plugin_manager_facade.py  test_workflow.py
