[project]
name = "mif"
version = "0.1.0"
description = "A lightweight Alfred-like launcher/workflow runner in Python."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prompt_toolkit>=3.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
search = ["thefuzz>=0.19.0"]
clipboard = ["pyperclip>=1.8.0"]
qt = ["PySide6>=6.5.0"]
all = [
    "prompt_toolkit>=3.0",
    "pynput>=1.7.6",
    "thefuzz>=0.19.0",
    "pyperclip>=1.8.0",
    "PySide6>=6.5.0",
]
[project.scripts]
mif = "mif.main:main"
mif-qt = "mif.gui_qt.launcher:_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["mif*"]
